--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   "main": "index.js",
   "dependencies": {},
   "devDependencies": {
-    "@applitools/eyes-cypress": "^3.7.5",
     "cypress": "^3.4.1",
+    "cypress-image-snapshot": "^3.1.1",
     "eslint": "^6.4.0",
     "eslint-plugin-cypress": "^2.6.1"
   },
   "scripts": {
-    "test": "test"
+    "test": "cypress run"
   },
   "repository": {
     "type": "git",
